# Pattern-Maui

./: .gitignore  ARCHITECTURE.md  MAC_BUILD.md  README.md  app.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reasonix.toml  styles.css
.github/workflows/: maui-validation.yml
apps/desktop/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.agentos.windows.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: bridge.rs  lib.rs  main.rs
apps/maui/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Pattern.Maui.csproj  README.md  launch.ps1
apps/maui/Services/: AppSettingsStore.cs  AutostartService.cs  GlobalHotkeyService.cs  MacCatalystMenuService.cs  NativeBridgeService.cs  PairingCryptoService.cs  (+4 more)
apps/mobile/: README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
docs/: AGENTOS_RECOVERY.md  COMPETITIVE_RESEARCH.md  IMPLEMENTATION_PLAN.md  MAUI_MIGRATION_PLAN.md  MAUI_UI_MIGRATION_PLAN.md  PLATFORM_VALIDATION.md  PRODUCT_VISION.md  UX_GAPS_AND_ROADMAP.md  system-prompt.md
scripts/: apply_security_p0.py  build-android.ps1  bundle-agentos.ps1  bundle-sidecar-windows.ps1  fix-sidecar-encoding.mjs  fix_maximize_and_layout.py  fix_sidecar_prompt.py  generate_icon.py  relay-pull.mjs  start-pattern.ps1
sidecar/: package.json  tsconfig.json
sidecar/scripts/: run-tests.mjs
sidecar/src/: index.ts  slash-handlers.ts
sidecar/test/: channels.test.mjs  computer-use-text.test.mjs  e2e.test.mjs  extract.test.mjs  memory.test.mjs  relay.test.mjs  routing-tools.test.mjs  runtime.test.mjs  stdio.test.mjs  workspace.test.mjs
tests/: app-flows.mjs  oobe.mjs  run-ui.mjs  ui-accessibility.mjs
(+51 files in other folders)
