[package]
name = "pattern-desktop"
version = "0.3.0"
description = "Pattern desktop AI companion"
authors = ["Pattern Contributors"]
edition = "2021"

[lib]
name = "pattern_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
keyring = { version = "3", features = ["windows-native"] }
dirs = "6"
chrono = { version = "0.4", features = ["clock"] }
base64 = "0.22"
battery = "0.7"
tiny_http = "0.12"
enigo = "0.3"
xcap = "0.0.14"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
rfd = "0.15"
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2"
accessibility-sys = "0.2"
cocoa = "0.26"
core-foundation = "0.10"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
