[package]
name = "pattern-mobile"
version = "0.3.0"
description = "Pattern mobile relay client"
edition = "2021"

[lib]
name = "pattern_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
